<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.activity.ContactListActivity">

    <include
        layout="@layout/contact_list_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar"/>

    <Button
        android:id="@+id/btn_allContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sokol_contact"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:background="@drawable/button_backgroud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        />

    <Button
        android:id="@+id/btn_supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_backgroud"
        android:text="@string/supplier"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/btn_allContact"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/btn_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_backgroud"
        android:text="@string/customer"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/btn_supplier"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_allContact"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/btn_add_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/button_in_contact_list"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="5dp"
        android:padding="13dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_add_20"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/addButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_customer"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/white"
            />
    </LinearLayout>

<!--    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginRight="10dp"-->
<!--        android:layout_marginBottom="35dp"-->
<!--        android:text="@string/add_new_customer"-->
<!--        app:icon="@drawable/ic_add_20"-->
<!--        android:textColor="@color/white"-->
<!--        app:iconTint="@color/white"-->
<!--        app:layout_anchorGravity="bottom|right|end"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        />-->



</androidx.constraintlayout.widget.ConstraintLayout>